--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     </p>
 
     <p>
-        <b>Kringle Info</b> <i>/ˈkrɪŋ.ɡəl in·fo/</i>. An online solution editor inspired by <a href="https://www.sans.org/mlp/holiday-hack-challenge/">SANS Holiday Hack Challenge &amp; KringleCon</a>.<br>
+        <b>Kringle Info</b> <i>/ˈkrɪŋ.ɡəl in·fo/</i>. An online CTF solution editor inspired by <a href="https://www.sans.org/mlp/holiday-hack-challenge/">SANS Holiday Hack Challenge &amp; KringleCon</a>.<br>
         Currently WIP - work in progress. 😀<br>
         <br>
         If you want to get in touch with me just visit my <a href="https://github.com/Benjamin-BK-Krueger">GitHub page</a> or my <a href="https://blk8.de">WordPress site</a>. 
