--- a/templates/junction_detail.html
+++ b/templates/junction_detail.html
@@ -12,10 +12,11 @@
     <h2>{% block title %} #{{ junction.junction_id }} {% endblock %}</h2>
     
     <p>
-        <i>Found in <a href="{{ url_for('get_room', room_id=junction.room_id)}}">Room ID #{{ junction.room_id }}</a></i></br>
-        <i>Targeting <a href="{{ url_for('get_room', room_id=junction.dest_id)}}">Room ID #{{ junction.dest_id }}</a></i></br>
+        <i>Found in <a href="{{ url_for('get_room', room_id=room_source.room_id)}}">{{ room_source.room_name }}</a></i></br>
+        <i>Targeting <a href="{{ url_for('get_room', room_id=room_dest.room_id)}}">{{ room_dest.room_name }}</a></i></br>
         <table><tbody>
-            <tr><td width="30%">Description:</td> <td width="70%">{{ junction.junction_desc }}</td></tr>
+            <tr><td width="20%">ID</td> <td width="80%">{{ junction.junction_id }}</td></tr>
+            <tr><td colspan="2">{{ junction.junction_desc }}</td></tr>
         </tbody></table>
     </p>
 
