--- a/templates/stats.html
+++ b/templates/stats.html
@@ -5,13 +5,14 @@
 
     <p>
         <ul>
-            <li>Creator count: {{ counts['creator'] }}</li>
-            <li>World count: {{ counts['world'] }}</li>
-            <li>Room count: {{ counts['room'] }}</li>
-            <li>Item count: {{ counts['item'] }}</li>
-            <li>Person count: {{ counts['person'] }}</li>
-            <li>Objective count: {{ counts['objective'] }}</li>
-            <li>Junction count: {{ counts['junction'] }}</li>
+            <li>Creators: {{ counts['creator'] }}</li>
+            <li>Worlds: {{ counts['world'] }}</li>
+            <li>Rooms: {{ counts['room'] }}</li>
+            <li>Items: {{ counts['item'] }}</li>
+            <li>Persons: {{ counts['person'] }}</li>
+            <li>Objectives: {{ counts['objective'] }}</li>
+            <li>Junctions: {{ counts['junction'] }}</li>
+            <li>Solutions: {{ counts['solution'] }}</li>
         </ul>
     </p>    
 {% endblock %}
