--- a/static/simple-red.css
+++ b/static/simple-red.css
@@ -165,7 +165,7 @@ input[type="reset"],
 input[type="button"] {
   border: none;
   border-radius: 5px;
-  
+  background: var(--accent);
   font-size: 1rem;
   
   padding: 0.7rem 0.9rem;
