--- a/templates/base.html
+++ b/templates/base.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <header>
-    <h1>Kringle Web</h1>
-    <p>Rooms and Objectives</p>
+    <h1>Kringle.info</h1>
+    <p>&lt; Rooms and Objectives &gt;</p>
   </header>
 
   <div id="pagestart"></div>
@@ -30,7 +30,12 @@
   </main>
 
   <footer>
-    <p><a href="{{ url_for('get_logged') }}">Log in</a>, {{ 'Logged in as ' + current_user.creator_name + ', ' if (current_user.is_authenticated) }}<a href="{{ url_for('get_logout') }}">Log out</a></p>
+    {% if current_user.is_authenticated %}
+    <p>Logged in as {{ current_user.creator_name }}, <a href="{{ url_for('get_logout') }}">Log out</a></p>
+    {% endif %}
+    {% if not current_user.is_authenticated %}
+    <p><a href="{{ url_for('get_logged') }}">Log in</a></p>
+    {% endif %}
     <p>Version: {{ version }}</p>
     <p><a href="#pagestart">Go to top of page</a></p>
   </footer>
