--- a/templates/item_detail.html
+++ b/templates/item_detail.html
@@ -12,9 +12,10 @@
     <h2>{% block title %} {{ item.item_name }} (#{{ item.item_id }}) {% endblock %}</h2>
 
     <p>
-        <i>Found in <a href="{{ url_for('get_room', room_id=item.room_id)}}">Room ID #{{ item.room_id }}</a></i></br>
+        <i>Found in <a href="{{ url_for('get_room', room_id=room.room_id)}}">{{ room.room_name }}</a></i></br>
         <table><tbody>
-            <tr><td width="30%">Description:</td> <td width="70%">{{ item.item_desc }}</td></tr>
+            <tr><td width="20%">ID</td> <td width="80%">{{ item.item_id }}</td></tr>
+            <tr><td colspan="2">{{ item.item_desc }}</td></tr>
         </tbody></table>
     </p>
 
