--- a/templates/objective.html
+++ b/templates/objective.html
@@ -17,7 +17,7 @@
         {% endif %}
         <ul>
             {% for objective in objectives %}
-            <li><a href="{{ url_for('get_objective', objective_id=objective.objective_id)}}">{{ objective.objective_name }} (#{{ objective.objective_id }})</a></li>
+            <li><a href="{{ url_for('get_objective', objective_id=objective.objective_id)}}">{{ objective.objective_name }}</a></li>
             {% endfor %}
         </ul>
     </p>
