--- a/templates/person_detail.html
+++ b/templates/person_detail.html
@@ -9,12 +9,13 @@
 {% endblock %}
 
 {% block content %}
-    <h2>{% block title %} {{ person.person_name }} (#{{ person.person_id }}) {% endblock %}</h2>
+    <h2>{% block title %} {{ person.person_name }} {% endblock %}</h2>
     
     <p>
-        <i>Found in <a href="{{ url_for('get_room', room_id=person.room_id)}}">Room ID #{{ person.room_id }}</a></i></br>
+        <i>Found in <a href="{{ url_for('get_room', room_id=room.room_id)}}">{{ room.room_name }}</a></i></br>
         <table><tbody>
-            <tr><td width="30%">Description:</td> <td width="70%">{{ person.person_desc }}</td></tr>
+            <tr><td width="20%">ID</td> <td width="80%">{{ person.person_id }}</td></tr>
+            <tr><td colspan="2">{{ person.person_desc }}</td></tr>
         </tbody></table>
     </p>
 
