--- a/templates/room.html
+++ b/templates/room.html
@@ -17,7 +17,7 @@
         {% endif %}
         <ul>
             {% for room in rooms %}
-            <li><a href="{{ url_for('get_room', room_id=room.room_id)}}">{{ room.room_name }} (#{{ room.room_id }})</a></li>
+            <li><a href="{{ url_for('get_room', room_id=room.room_id)}}">{{ room.room_name }}</a></li>
             {% endfor %}
         </ul>
     </p>
