--- a/templates/world_detail.html
+++ b/templates/world_detail.html
@@ -18,7 +18,7 @@
     </p>
 
     <p>
-        <form action="{{ url_for('get_rooms', world_id=world.world_id) }}" method="GET">
+        <form action="{{ url_for('get_objectives', world_id=world.world_id) }}" method="GET">
             <input type="submit" value="Select World" style="font-weight: bold;">
         </form>
     </p>
