--- a/templates/base_editor.html
+++ b/templates/base_editor.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <title>Kringle Info - {% block title %} {% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ prefix }}/static/simple-red.css">
+    <link rel="stylesheet" href="{{ prefix }}/static/simple.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/easymde/dist/easymde.min.css">
     <script src="https://cdn.jsdelivr.net/npm/easymde/dist/easymde.min.js"></script>
     <link rel="icon" type="image/png" href="{{ prefix }}/static/kringle_logo_s.png" />
+    <style>
+      .editor-toolbar .easymde-dropdown, .editor-toolbar button {
+        background: var(--accent);
+      }
+      </style>
 </head>
 <body>
   <header>
