--- a/templates/world_detail.html
+++ b/templates/world_detail.html
@@ -1,4 +1,4 @@
-{% extends 'base_init.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
     <h2>{% block title %} {{ world.world_name }} {% endblock %}</h2>
