--- a/templates/account_detail.html
+++ b/templates/account_detail.html
@@ -1,4 +1,4 @@
-{% extends 'base_init.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
     <h2>{% block title %} Edit Account {% endblock %}</h2>
