--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-{% extends 'base_init.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
     <h2>{% block title %} Welcome to {% endblock %}</h2>
