--- a/templates/storage.html
+++ b/templates/storage.html
@@ -1,4 +1,4 @@
-{% extends 'base_init.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
     <h2>{% block title %} S3 Storage {% endblock %}</h2>
