--- a/templates/solution_detail.html
+++ b/templates/solution_detail.html
@@ -9,13 +9,13 @@
 
     {% if (current_user.creator_id != solution.creator_id) and (current_user.creator_role == "creator" or current_user.creator_role == "user") %}
     <p>
-        <form action="{{ url_for('get_likesolution', solution_id=solution.solution_id) }}" method="GET">
+        <form action="{{ url_for('show_liked_solution', solution_id=solution.solution_id) }}" method="GET">
             <input type="submit" value="Like / Unlike">
         </form>
     </p>
     {% endif %}
 
     <p>
-        <a href="{{ url_for('get_objective', objective_id=objective.objective_id) }}">Back to Objective</a>
+        <a href="{{ url_for('show_objective', objective_id=objective.objective_id) }}">Back to Objective</a>
     </p>
 {% endblock %}
