--- a/templates/account.html
+++ b/templates/account.html
@@ -5,7 +5,7 @@
 
     <p>
         <h4>Please enter data:</h4>
-        <form action="{{ url_for('get_newcreator') }}" method="POST">
+        <form action="{{ url_for('show_new_creator') }}" method="POST">
             {{ form.csrf_token }}
             <p>
             <table><tbody>
@@ -17,7 +17,7 @@
             </tbody></table>
             ¹ Also used as your login, may not contain spaces<br>
             ² Only used to send notifications about account changes like e-mail address changes<br>
-            ³ Currently you need an invitiation code. Just <a href="{{ url_for('get_index')}}">get in contact with me</a> to get one
+            ³ Currently you need an invitiation code. Just <a href="{{ url_for('show_index')}}">get in contact with me</a> to get one
             </p>
             <ul class="errors">
                 {% for error in form.creator.errors %}
