--- a/templates/creator_detail.html
+++ b/templates/creator_detail.html
@@ -16,6 +16,6 @@
     </p>
 
     <p>
-        <a href="{{ url_for('get_creators') }}">All Creators</a>
+        <a href="{{ url_for('show_creators') }}">All Creators</a>
     </p>
 {% endblock %}
