--- a/templates/item.html
+++ b/templates/item.html
@@ -9,7 +9,7 @@
         {% endif %}
         <ul>
             {% for item in items %}
-            <li><a href="{{ url_for('get_item', item_id=item.item_id)}}">{{ item.item_name }}</a></li>
+            <li><a href="{{ url_for('show_item', item_id=item.item_id)}}">{{ item.item_name }}</a></li>
             {% endfor %}
         </ul>
     </p>
