--- a/templates/objective_detail.html
+++ b/templates/objective_detail.html
@@ -4,7 +4,7 @@
     <h2>{% block title %} {{ objective.objective_name }} {% endblock %}</h2>
 
     <p>
-        <i>Found in <a href="{{ url_for('get_room', room_id=room.room_id)}}">{{ room.room_name }}</a></i></br>
+        <i>Found in <a href="{{ url_for('show_room', room_id=room.room_id)}}">{{ room.room_name }}</a></i></br>
         <table><tbody>
             <tr><td width="20%">ID</td> <td width="80%">{{ objective.objective_id }}</td></tr>
             <tr><td>Title</td> <td>{{ objective.objective_title }}</td></tr>
@@ -34,7 +34,7 @@
         <ul>
             {% if world.visible == 1 %}
                 {% for solution in solutions %}
-                <li><a href="{{ url_for('get_solution', solution_id=solution.solution_id)}}">Solution</a> created by <a href="{{ url_for('get_creator', creator_id=solution.creator_id)}}">{{ creatorall[solution.solution_id] }}</a>, votes: {{ votingall[solution.solution_id] }}</li>
+                <li><a href="{{ url_for('show_solution', solution_id=solution.solution_id)}}">Solution</a> created by <a href="{{ url_for('show_creator', creator_id=solution.creator_id)}}">{{ creatorall[solution.solution_id] }}</a>, votes: {{ votingall[solution.solution_id] }}</li>
                 {% endfor %}
             {% else %}
                 Solutions are not visible as this world is not public currently.
@@ -47,18 +47,18 @@
     <p>
         <h4>Edit Data</h4>
         {% if current_user.creator_id == world.creator_id %}
-        <form action="{{ url_for('get_quest', objective_id=objective.objective_id)}}">
+        <form action="{{ url_for('show_quest', objective_id=objective.objective_id)}}">
             <input type="submit" value="Edit Master Quest" />
         </form>
         {% endif %}
         {% if current_user.creator_role == "creator" or current_user.creator_role == "user" %}
-        <form action="{{ url_for('get_mysolution', objective_id=objective.objective_id)}}">
+        <form action="{{ url_for('show_my_solution', objective_id=objective.objective_id)}}">
             <input type="submit" value="Edit My Solution" />
         </form>
         {% endif %}
     </p>
 
     <p>
-        <a href="{{ url_for('get_objectives', world_id=objective.world_id) }}">All Objectives</a>
+        <a href="{{ url_for('show_objectives', world_id=objective.world_id) }}">All Objectives</a>
     </p>
 {% endblock %}
