--- a/templates/quest_detail.html
+++ b/templates/quest_detail.html
@@ -4,7 +4,7 @@
     <h2>{% block title %} Single Quest {% endblock %}</h2>
 
     <p>
-        <form action="{{ url_for('get_quest', objective_id=objective_id)}}" method="POST">
+        <form action="{{ url_for('show_quest', objective_id=objective_id)}}" method="POST">
             <textarea name="quest" cols="50" rows="10">{{ quest }}</textarea>
             <script>
                 const easyMDE = new EasyMDE();
