--- a/templates/room_detail.html
+++ b/templates/room_detail.html
@@ -4,7 +4,7 @@
     <h2>{% block title %} {{ room.room_name }} {% endblock %}</h2>
         
     <p>
-        <i>Found in <a href="{{ url_for('get_world', world_id=world.world_id)}}">{{ world.world_name }}</a></i></br>
+        <i>Found in <a href="{{ url_for('show_world', world_id=world.world_id)}}">{{ world.world_name }}</a></i></br>
         <table><tbody>
             <tr><td width="20%">ID</td> <td width="80%">{{ room.room_id }}</td></tr>
             <tr><td colspan="2">{{ room.room_desc }}</td></tr>
@@ -16,6 +16,6 @@
     </p>
 
     <p>
-        <a href="{{ url_for('get_rooms', world_id=room.world_id) }}">All Rooms</a>
+        <a href="{{ url_for('show_rooms', world_id=room.world_id) }}">All Rooms</a>
     </p>
 {% endblock %}
